# umbra

./: CMakeLists.txt  image2animation.m  makefile  square_nodes_5m.csv  umbra.sln  umbra.vcxproj  umbra.vcxproj.filters
matlab/: boundary_nodes.csv  computeNormalVectorTriangulation.m  export_fig.m  ilios.m  image2animation.m  inRect.m  minboundbox.m  minboundrect.m  pdf2eps.m  pdftops.m  plot3k.m  print2array.m  print2eps.m  umbra.m
src/: CMakeLists.txt  bounding_rect.cpp  bounding_rect.h  graphics.cpp  graphics.h  main.cpp  matlab_engine.cpp  matlab_engine.h  point.h  triangle.cpp  triangle.h  triangulation.cpp  triangulation.h  vertex.h
utils/rasterive_mesh/: SaveAsciiRaster.m  gridtrimesh.m  rasterize.m
